--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,7 @@
 {
+  "tasks": {
+    "test": "deno test --unstable-kv"
+  },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.4",
     "@vwkd/feed": "jsr:@vwkd/feed@^0.0.3"
