--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,7 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.4",
+    "@std/async": "jsr:@std/async@^1.0.5",
     "@vwkd/feed": "jsr:@vwkd/feed@^0.0.3"
   }
 }
