--- a/deno.json
+++ b/deno.json
@@ -9,6 +9,7 @@
     "@std/assert": "jsr:@std/assert@^1.0.4",
     "@std/async": "jsr:@std/async@^1.0.5",
     "@std/collections": "jsr:@std/collections@^1.0.5",
+    "@std/log": "jsr:@std/log@^0.224.7",
     "@vwkd/feed": "jsr:@vwkd/feed@^0.0.3"
   }
 }
