--- a/deno.json
+++ b/deno.json
@@ -6,6 +6,7 @@
     "test": "deno test --unstable-kv -R=tests/ -W=tests/"
   },
   "imports": {
+    "@kitsonk/kv-toolbox": "jsr:@kitsonk/kv-toolbox@^0.28.0",
     "@std/assert": "jsr:@std/assert@^1.0.13",
     "@std/async": "jsr:@std/async@^1.0.13",
     "@std/collections": "jsr:@std/collections@^1.1.0",
